src/test/deca/context/invalid/created/Objet/Passe_3/WrongReturnType.deca
// Description:
//    teste un mauvais type de retour
// Resultats:
//    WrongReturnType.deca:8:15: Error: Illegal RValue type, got boolean, expected int

class A {
    int m() {
        return true;
    }
}

{

}